deployment/frontend/game-server/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: game-server
    app.openshift.io/runtime: nodejs
    application: game-server
  name: game-server
spec:
  podManagementPolicy: OrderedReady
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: game-server
  serviceName: game-server
  template:
    metadata:
      labels:
        app: game-server
    spec:
      containers:
      - env:
        - name: NAMESPACE
          value: frontend
        - name: AWS_ACCESS_KEY_ID
          valueFrom:
            secretRef:
              name: creds
              key: AWS_ACCESS_KEY_ID
        - name: AWS_SECRET_ACCESS_KEY
          valueFrom:
            secretRef:
              name: creds
              key: AWS_SECRET_ACCESS_KEY
        - name: AI_AGENT_SERVER_URL
          value: http://ai-agent-server.ai.svc.cluster.local:8080/agent
        image: quay.io/uksummit2023/2023-game-server:latest
        imagePullPolicy: Always
        name: game-server
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1024Mi
          requests:
            cpu: 1000m
            memory: 1024Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 10
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
