deployment/frontend/game-server/service-0.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: game-server-0
    application: game-server
  name: game-server-0
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    statefulset.kubernetes.io/pod-name: game-server-0
