deployment/frontend/game-server/service-3.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-name-3
    application: game-server
  name: app-name-3
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    statefulset.kubernetes.io/pod-name: app-name-3
